<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".REGISTRO">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="577dp"
            android:layout_height="943dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="411dp">

            <EditText
                android:id="@+id/Correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="example@gmail.com"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/Contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Contraseña"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/ContrasenaConfirmacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ContraseñaConfirmacion"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_200"
                android:onClick="registrarUsuario"
                android:text="@string/btn_Registrarse"
                tools:text="@string/btn_Registrarse" />


            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:contextClickable="false" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>