<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C1C8F1"
    tools:context=".IniciarSesionActivity"><![CDATA[


        android:layout_width="match_parent"
        android:layout_height="match_parent">

        ]]>

        <EditText
            android:id="@+id/Contrasena1"
            android:layout_width="364dp"
            android:layout_height="52dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/Contrasena"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.659"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Correo" />

        <EditText
            android:id="@+id/Correo"
            android:layout_width="370dp"
            android:layout_height="62dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="19dp"
            android:ems="10"
            android:hint="@string/Correo"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/Contrasena1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.756"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView13" />

        <Button
            android:id="@+id/button"
            android:layout_width="216dp"
            android:layout_height="62dp"
            android:layout_marginTop="24dp"
            android:background="@color/purple_200"
            android:backgroundTint="@color/purple_200"
            android:onClick="Iniciarsesion"
            android:text="@string/btn_Iniciar_Sesion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Contrasena1" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="278dp"
            android:layout_height="252dp"
            android:layout_marginStart="66dp"
            android:layout_marginTop="53dp"
            android:layout_marginEnd="67dp"
            android:layout_marginBottom="11dp"
            app:layout_constraintBottom_toTopOf="@+id/Correo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/todolist" />

</androidx.constraintlayout.widget.ConstraintLayout>

