<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C1C8F1"
    tools:context=".Logeado">

    <Button
        android:id="@+id/btnAddItem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="28dp"
        android:text="Agregar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvItems"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/etNewItem2"
        android:layout_width="171dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/btnAddItem"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="28dp"
        android:layout_toStartOf="@+id/btnAddItem"
        android:layout_toLeftOf="@+id/btnAddItem"
        android:hint="Tarea"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvItems" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="216dp"
        android:text="@string/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_info_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:onClick="chat"
        android:text="@string/Chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_CerrarSesion2"
        tools:text="@string/Chat" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_green_light"
        android:onClick="Videollamada"
        android:text="@string/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/tv_info_user"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_CerrarSesion2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/btn_CerrarSesion2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/purple_200"
        android:onClick="clickCerrarSesion2"
        android:text="@string/btn_CerrarSesionADMIN"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="217dp"
        android:layout_height="126dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="58dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_info_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/todolist" />

</androidx.constraintlayout.widget.ConstraintLayout>