<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IniciarSesionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/Contrasena1"
            android:layout_width="364dp"
            android:layout_height="52dp"
            android:ems="10"
            android:hint="@string/Contrasena"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

        <EditText
            android:id="@+id/Correo"
            android:layout_width="370dp"
            android:layout_height="62dp"
            android:ems="10"
            android:hint="@string/Correo"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.471"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView9" />

        <Button
            android:id="@+id/button"
            android:layout_width="216dp"
            android:layout_height="62dp"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:onClick="Iniciarsesion"
            android:text="@string/btn_Iniciar_Sesion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="469dp"
            android:layout_height="126dp"
            android:layout_marginTop="52dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Contrasena1"></LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="479dp"
            android:layout_height="57dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/Correo"
            tools:layout_editor_absoluteX="-2dp"></LinearLayout>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="943dp"
            android:layout_height="1237dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/rectangle_1" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Contrasena1"
            app:srcCompat="@drawable/rectangle_2" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView9"
            app:srcCompat="@drawable/rectangle_2" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="161dp"
            android:layout_height="149dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user_square" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:srcCompat="@drawable/rectangle_4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>